# CANary_0.1

./: .gitignore  Makefile  README.md  canary_startup.py  pixi.toml  pyproject.toml  pytest.ini
config/: starter_config.json
docs/Architecture/: C01-14-tf-canary-architecture-documentation.md  C01-21-tf-canary-interface-definition.md  C01-22-tf-canary-data-model-documentation  C01-23-tf-canary-Cross-Cutting-Concerns  C01-24-tf-canary-makefile.md  C01-25-tf-canary-pixi.toml  C01-27-tf-canary-plattformDetector.md  C01-28-tf-canary-venv-setup.md  C01-29-tf-canary-pixi-environment.md  C01-30-tf-canary-LoggingSystem.md  C01-31-tf-canary-cli.md  C01-32-tf-canary-ConfigurationManager.md  C01-33-tf-canary-SQLiteDBr.md  C01-34-tf-canary-ScenarioLoader.md  C01-35-tf-canary-ScenarioValidator.md  C01-36-tf-canary-ScenarioManager.md  c01-39_CarSimulator.md  c01-40_CANInterfaceFactoryr.md  c01-41_VirtualCANInterface.md  c01-42_HardwareCANInterface.md  c01-43_CANManager.md  c01-44_CANVisualizer.md  c01-45_MainWindow.md  c01-46_DevelopmentDocumentation.md
docs/Development/: C01-46-tf-canary-Development-Documentation.md
docs/User_Manual/: Usermanual.md  canary_startup_docs.md
src/: __init__.py  __main__.py
src/cli/: __init__.py  cli.py
src/core/: __init__.py  error_manager.py  logging_system.py  platform_detector.py
src/testing/: __init__.py  test_runner.py
tests/: conftest.py  test_init.py  test_init.py .py
tests/test_cli/: __init__.py  test_cli.py
tests/test_core/: __init__.py  test_error_manager.py  test_logging_system.py  test_platform_detector.py
tests/test_env/: __init__.py  test_venv_setup.py  venv-setup-test.py
(+13 files in other folders)
